--- a/my.kv
+++ b/my.kv
@@ -1,4 +1,11 @@
 <TelaLogin>
+    canvas.before:
+        Color:
+            rgba: 1, 1, 1, 1
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
     name: "login"
     usuario: usuario
     senha: senha
@@ -7,36 +14,38 @@
         
         Label:
             text:"Usuário"
-            font_size: (root.width**2 + root.height**2) / 13**4
-            size_hint: 0.35, 0.15
+            color: 0,0,0,1
+            font_size: (root.width**2 + root.height**2)**0.5 / 30 
+            size_hint: 0.2, 0.1
             # No canto supeior (y=0.8) direito (x=0.7)
-            pos_hint: {"x":0.7, "top":0.9}
+            pos_hint: {"x":0.6, "top":0.9}
 
         TextInput:
             id: usuario
-            font_size: (root.width**2 + root.height**2) / 13**4
-            size_hint: 0.4, 0.15
+            font_size: (root.width**2 + root.height**2)**0.5 / 30
+            size_hint: 0.4, 0.12
             # Um pouco abaixo do usuario
-            pos_hint: {"x":0.7, "top":0.7}
+            pos_hint: {"x":0.5, "top":0.8}
             multilie: False
 
         Label:
             text:"Senha"
-            font_size: (root.width**2 + root.height**2) / 13**4
-            size_hint: 0.35, 0.15
-            pos_hint: {"x":0.7, "top":0.5}
+            color: 0,0,0,1
+            font_size: (root.width**2 + root.height**2)**0.5 / 30
+            size_hint: 0.2, 0.1
+            pos_hint: {"x":0.6, "top":0.6}
 
         TextInput:
             id: senha
-            font_size: (root.width**2 + root.height**2) / 13**4
-            size_hint: 0.4, 0.15
-            pos_hint: {"x":0.7, "top":0.3}
+            font_size: (root.width**2 + root.height**2)**0.5 / 30
+            size_hint: 0.4, 0.12
+            pos_hint: {"x":0.5, "top":0.5}
             multilie: False
 
         Button:
-            pos_hint: {"x":0.75,"y":0.1}
-            size_hint: 0.4, 0.1
-            font_size: (root.width**2 + root.height**2) / 13**4
+            pos_hint: {"x":0.5,"y":0.1}
+            font_size: (root.width**2 + root.height**2)**0.5 / 30
+            size_hint: 0.4, 0.12
             text:"Login"
             on_release:
                 root.manager.transition.direction = "up"
