--- a/my.kv
+++ b/my.kv
@@ -11,63 +11,79 @@
     senha: senha
 
     FloatLayout:
+        cols: 1
+
+        FloatLayout:     
+            Label:
+                text:"Usuário"
+                color: 0,0,0,1
+                font_size: (root.width**2 + root.height**2)**0.5 / 30 
+                size_hint: 0.2, 0.1
+                # No canto supeior (y=0.8) direito (x=0.7)
+                pos_hint: {"x":0.6, "top":0.9}
+
+            TextInput:
+                id: usuario
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
+                size_hint: 0.4, 0.12
+                # Um pouco abaixo do usuario
+                pos_hint: {"x":0.5, "top":0.8}
+                multilie: False
+
+            Label:
+                text:"Senha"
+                color: 0,0,0,1
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
+                size_hint: 0.2, 0.1
+                pos_hint: {"x":0.6, "top":0.6}
+
+            TextInput:
+                id: senha
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
+                size_hint: 0.4, 0.12
+                pos_hint: {"x":0.5, "top":0.5}
+                multilie: False
+
+            Button:
+                pos_hint: {"x":0.5,"y":0.1}
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
+                size_hint: 0.4, 0.12
+                text:"Login"
+                on_release:
+                    root.manager.transition.direction = "up"
+                    root.logarHandle()
+
+            Label:
+                text:"[ref=registro]Clique aqui"+"\n"+" para se registrar[/ref]"
+                color: 0,0,0,1
+                font_size: (root.width**2 + root.height**2)**0.5 / 50
+                size_hint: 0.4, 0.12
+                pos_hint: {"x":0.05, "top":0.2}
+                halign: "center"
+                valign: "center"
+                markup: True
+                on_ref_press:
+                    root.manager.transition.direction = "up"
+                    root.registrarHandle()
         
-        Label:
-            text:"Usuário"
-            color: 0,0,0,1
-            font_size: (root.width**2 + root.height**2)**0.5 / 30 
-            size_hint: 0.2, 0.1
-            # No canto supeior (y=0.8) direito (x=0.7)
-            pos_hint: {"x":0.6, "top":0.9}
-
-        TextInput:
-            id: usuario
-            font_size: (root.width**2 + root.height**2)**0.5 / 30
-            size_hint: 0.4, 0.12
-            # Um pouco abaixo do usuario
-            pos_hint: {"x":0.5, "top":0.8}
-            multilie: False
-
-        Label:
-            text:"Senha"
-            color: 0,0,0,1
-            font_size: (root.width**2 + root.height**2)**0.5 / 30
-            size_hint: 0.2, 0.1
-            pos_hint: {"x":0.6, "top":0.6}
-
-        TextInput:
-            id: senha
-            font_size: (root.width**2 + root.height**2)**0.5 / 30
-            size_hint: 0.4, 0.12
-            pos_hint: {"x":0.5, "top":0.5}
-            multilie: False
-
-        Button:
-            pos_hint: {"x":0.5,"y":0.1}
-            font_size: (root.width**2 + root.height**2)**0.5 / 30
-            size_hint: 0.4, 0.12
-            text:"Login"
-            on_release:
-                root.manager.transition.direction = "up"
-                root.logarHandle()
-
-        Label:
-            text:"[ref=registro]Clique aqui"+"\n"+" para se registrar[/ref]"
-            color: 0,0,0,1
-            font_size: (root.width**2 + root.height**2)**0.5 / 50
-            size_hint: 0.4, 0.12
-            pos_hint: {"x":0.05, "top":0.2}
-            halign: "center"
-            valign: "center"
-            markup: True
-            on_ref_press:
-                root.manager.transition.direction = "up"
-                root.registrarHandle()
-
-        
+        BoxLayout:
+            orientation: "vertical"
+            size_hint: [.4,.4]
+            pos_hint: {"right":0.45, "top":0.8}
+            Image:
+                source: "recursos/logo.png"
+                allow_stretch: True
+                keep_ratio: True
         
 
 <TelaRegistro>
+    canvas.before:
+        Color:
+            rgba: 1, 1, 1, 1
+        Rectangle:
+            pos: self.pos
+            size: self.size
+            
     name: "registro"
     nome: nome
     usuario: usuario
@@ -80,83 +96,88 @@
 
         FloatLayout:   
             Label:
+                color: 0,0,0,1
                 text:"Nome completo"
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.1, "top":0.9}
 
             TextInput:
                 id: nome
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
-                pos_hint: {"x":0.4, "top":0.9}
+                pos_hint: {"x":0.5, "top":0.9}
                 multilie: False
 
             Label:
+                color: 0,0,0,1
                 text:"Nome de usuário"
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.1, "top":0.75}
 
             TextInput:
                 id: usuario
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
-                pos_hint: {"x":0.4, "top":0.75}
+                pos_hint: {"x":0.5, "top":0.75}
                 multilie: False
 
             Label:
+                color: 0,0,0,1
                 text:"E-mail"
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.1, "top":0.60}
 
             TextInput:
                 id: email
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
-                pos_hint: {"x":0.4, "top":0.60}
+                pos_hint: {"x":0.5, "top":0.60}
                 multilie: False
 
             Label:
+                color: 0,0,0,1
                 text:"Senha"
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.1, "top":0.45}
 
             TextInput:
                 id: senha
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
-                pos_hint: {"x":0.4, "top":0.45}
+                pos_hint: {"x":0.5, "top":0.45}
                 multilie: False
 
             Label:
+                color: 0,0,0,1
                 text:"Confirmar senha"
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.1, "top":0.30}
 
             TextInput:
                 id: confirmar
-                font_size: (root.width**2 + root.height**2) / 13**4
+                font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
-                pos_hint: {"x":0.4, "top":0.30}
+                pos_hint: {"x":0.5, "top":0.30}
                 multilie: False
 
             Button:
-                pos_hint: {"x":0.4,"y":0.15}
-                size_hint: 0.15, 0.1
-                font_size: (root.width**2 + root.height**2) / 13**4
+                pos_hint: {"x":0.25,"top":0.15}
+                size_hint: 0.2, 0.1
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
                 text:"Registrar"
                 on_release:
                     root.manager.transition.direction = "left"
                     root.registrarHandle()
 
             Button:
-                pos_hint: {"x":0.6,"y":0.15}
-                size_hint: 0.15, 0.1
-                font_size: (root.width**2 + root.height**2) / 13**4
+                pos_hint: {"x":0.6,"top":0.15}
+                size_hint: 0.2, 0.1
+                font_size: (root.width**2 + root.height**2)**0.5 / 30
                 text:"Voltar"
                 on_release:
                     root.manager.transition.direction = "down"
