--- a/my.kv
+++ b/my.kv
@@ -249,6 +249,7 @@
                 source: "recursos/barraXP.png"
                 allow_stretch: True
                 keep_ratio: True
+                on_touch_down: root.pressionouImagem()
 
         BoxLayout:
             orientation: "vertical"
@@ -289,3 +290,38 @@
                     #root.manager.transition.direction = "down"
                     root.manager.transition = NoTransition()
                     root.voltar()
+
+<TelaStatus>
+    canvas.before:
+        Color:
+            rgba: 0.04, 0.62, 0.75, 1
+            # 9 159 191 255
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
+    name: "status"
+
+    BoxLayout:
+        orientation: "vertical"
+        size_hint: [1,1]
+        pos_hint: {"x":0, "y":0}
+        Image:
+            source: "recursos/menuStatus.jpeg"
+            allow_stretch: True
+            keep_ratio: True
+        Label:
+            color: 0,0,0,1
+            text:"Quantidade de cursos: " + root.quantidadeCursos()
+            font_size: (root.width**2 + root.height**2)**0.5 / 30
+            size_hint: 0.33, 0.10
+            pos_hint: {"x":0.6, "y":0.7}
+        Button:
+            pos_hint: {"x":0.6,"y":0.15}
+            size_hint: 0.2, 0.1
+            font_size: (root.width**2 + root.height**2)**0.5 / 30
+            text:"Voltar"
+            on_release:
+                #root.manager.transition.direction = "down"
+                root.manager.transition = NoTransition()
+                root.voltar()
