Organiza a tela da trilha

--- a/my.kv
+++ b/my.kv
@@ -349,6 +349,21 @@
             keep_ratio: True
             source: "recursos/barraXP.png"
 
+        Image:
+            id: trilha
+            pos: [0, -30]
+            size_hint: [1, 1]
+            allow_stretch: True
+            keep_ratio: True
+            source: "recursos/trilha.png"
+        
+        BtnTerra:
+            id: btnTerra
+            pos: [370, 240]
+            size_hint: [0.35, 0.35]
+            allow_stretch: True
+            keep_ratio: True
+            source: "recursos/terra.png"
 
     #canvas.before:
     #    Color:
