--- a/my.kv
+++ b/my.kv
@@ -29,7 +29,7 @@
                 size_hint: 0.4, 0.12
                 # Um pouco abaixo do usuario
                 pos_hint: {"x":0.5, "top":0.8}
-                multilie: False
+                multiline: False
 
             Label:
                 text:"Senha"
@@ -43,7 +43,8 @@
                 font_size: (root.width**2 + root.height**2)**0.5 / 30
                 size_hint: 0.4, 0.12
                 pos_hint: {"x":0.5, "top":0.5}
-                multilie: False
+                multiline: False
+                password: True
 
             Button:
                 pos_hint: {"x":0.5,"y":0.1}
@@ -109,7 +110,7 @@
                 font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.5, "top":0.9}
-                multilie: False
+                multiline: False
 
             Label:
                 color: 0,0,0,1
@@ -123,7 +124,7 @@
                 font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.5, "top":0.75}
-                multilie: False
+                multiline: False
 
             Label:
                 color: 0,0,0,1
@@ -137,7 +138,7 @@
                 font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.5, "top":0.60}
-                multilie: False
+                multiline: False
 
             Label:
                 color: 0,0,0,1
@@ -151,7 +152,8 @@
                 font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.5, "top":0.45}
-                multilie: False
+                password: True
+                multiline: False
 
             Label:
                 color: 0,0,0,1
@@ -165,7 +167,8 @@
                 font_size: (root.width**2 + root.height**2)**0.5 / 40
                 size_hint: 0.33, 0.10
                 pos_hint: {"x":0.5, "top":0.30}
-                multilie: False
+                password: True
+                multiline: False
 
             Button:
                 pos_hint: {"x":0.25,"top":0.15}
@@ -390,6 +393,9 @@
             allow_stretch: True
             keep_ratio: True
             source: "recursos/help.png"
+
+#<TelaAjuda>
+    #FloatLayout:
 
     #canvas.before:
     #    Color:
